# calculator

./: Makefile  Makefile.am  Makefile.in  README.md  config.h  config.status  configure  configure.in  project1.glade.bak
autom4te.cache/: output.0  traces.0  traces.1
po/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  interface.c  main.c
src/.deps/: callbacks.Po  interface.Po  main.Po  support.Po
